Break down OmniboxPedal and isolate the baseclass: OmniboxAction.
This change aims at aligning the internal Actions architecture with
the shared code.

- The baseclass is the OmniboxAction, that encompasses just the
  strings and the action type.
- OmniboxPedal extends this class and hosts bits specific to the
  OmniboxPedal, such as the PedalId
- HistoryClustersAction extends the OmniboxAction and drops redundant
  field types (PedalId, URL).
- Icons are associated with the Action implementation.

Bug: 1418077
Change-Id: I0e6f03ba2e2fff925ec8b9118e46ed8824766d99
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4374469
Auto-Submit: Tomasz Wiszkowski <ender@google.com>
Commit-Queue: Tomasz Wiszkowski <ender@google.com>
Reviewed-by: Gang Wu <gangwu@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1123869}